--- a/public/index.css
+++ b/public/index.css
@@ -3,8 +3,8 @@ body,
 #map {
   margin: 0;
   padding: 0;
-  width: 500px;
-  height: 500px;
+  width: 100vw;
+  height: 100vh;
 }
 
 .details-info {
